# eternal-ai

./: .gitignore  README.md  eai.sh  package.json  quickstart.sh
EternalAI.js/: .gitignore  README.md  package.json
EternalAI.py/interact/: main.py  pyproject.toml  test-script.py
EternalAI.py/template/: pyproject.toml
EternalAI.py/template/template/: template.py
EternalAI.py/uniswap/: main.py  pyproject.toml
EternalAI.py/uniswap/tests/: uniswap_test.py
EternalAI.py/uniswap/uniswap/: const.py  uniswap.py
EternalAI.py/uniswap_ai/: .env.local  index.html  main.py  pyproject.toml  requirements.txt  sticktape.sh  stickytape.sh  uniswap_ai.py
EternalAI.py/uniswap_ai/tests/: uniswap_test.py
EternalAI.py/uniswap_ai/uniswap_ai/: __init__.py  const.py  inference.py  main.py  swap.py  uniswap_ai.py  uniswap_ai_inference.py
agent-as-a-service/: README.md
agent-cli/: .env.example  install.sh  package.json
agent-cli/src/: const.ts  handler.ts  log.ts  main.ts  manager.ts  mintv1.ts  mintv2.ts  model_handler.ts  utils.ts
agent-cli/twitter-agent/: package-lock.json  package.json
agent-launcher/: .eslintrc.cjs  .gitignore  README.md  build-mac.cjs  dev-app-update.yml  electron-builder.json5  index.html  package-lock.json  package.json  stats.html  truffle-config.js  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts
agent-launcher/configBuild/: AuthKey_58T29H46WS.p8  Certificates.p12  afterSign.cjs  build-install.cjs  icon.icns  (+3 more)
decentralized-agents/: hardhat.config.ts  package.json
decentralized-inference/: config.json  config.json.example
eai.js/: README.md
twitter-agent/: package.json
(+840 files in other folders)
