[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    { name = "0xgen0000", email = "52655944+0xgen0000@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

